2001-10-22  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* bug fixed in class mat method function set_size
	* removed mess package (classes moved to package data)
	* changed getlist to generic object without arguments
	* replaced fts_set/get_list by fts_set/get_array
	* fixed bug for lists in switch class

2001-10-17  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* Fixed bugs in fts/client.c. Now, the client does not have
	to create the "throw" object by hand. Added also a "connect_object"
	method in the client object.

2001-10-16  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* Fixed a bug in package saving: vm opcode return was missing

	* Added --enable-electric-fence to configure

2001-10-15  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* Changed kernel initialization: now splited into fts_kernel_*_init 
	(initialization of kernel structures) and fts_*_config (installation
	of kernel classes), so that the kernel objects can 1) access the
	command line arguments and 2) rely on the fact that the necessary
	platform initializations are done.

2001-09-28  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* changed fts/saver.c in order to be able to open a .jmax file
	outside saver.c. Tested that you can save any object in a .jmax
	file. This is for saving package object.

2001-09-14  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* moved all packages to automake/autoconf

2001-09-07  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* moved java/ compilation to automake/autoconf

2001-07-24  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* changed messtab to a double (int/symbol) hashtable and
	added putmess and getmess classes

	* changed messconst (package guiobj) to use the message class
	
	* added message class with list constructor (init)

2001-07-24  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* fixed invalid license header in some Java files.

2001-07-20  Francois Dechelle  <dechelle@lipari.ircam.fr>
